# HeartOn-public

./: Cargo.toml  README.md  build.rs
benches/: visibility_bench.rs
docs/: SIMD_API.md
examples/: simd_benchmark.rs  simple_voxel_world.rs
keys/: private.pem  public.pem
src/: budget.rs  capabilities.rs  config.rs  debug.rs  hud.rs  lib.rs  metrics.rs  plugin.rs  replay.rs  tier.rs  version.rs  voxel.rs
src/audio/: mod.rs
src/bench/: mod.rs
src/capabilities/: override_config.rs
src/platform/: mod.rs  wasm.rs
src/postfx/: budget.rs  config.rs  effects.rs  mod.rs
src/replay/: mod.rs
src/simd/: mod.rs  soa.rs  types.rs  visibility.rs
src/ui/: mod.rs  theme.rs  widgets.rs
src/voxel/: dummy.rs  dummy_renderer.rs  loader.rs  mod.rs  renderer.rs  scene.rs
