[package]
name = "hearton_public"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "HeartOn Engine - MIT-licensed public layer"

[dependencies]
bevy = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }
pollster = "0.3"

[lints]
workspace = true
