[package]
name = "hearton_public"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "HeartOn Engine - MIT-licensed public layer"

[dependencies]
bevy = { workspace = true }
bevy_egui = "0.25"
once_cell = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }
pollster = "0.3"
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"

[lints]
workspace = true

[[bench]]
name = "visibility_bench"
harness = false

[[example]]
name = "simple_voxel_world"
path = "../examples/simple_voxel_world.rs"
